# rknn_yolo_rtsp

./: README.md
capi_tools/: README.md  scaling_frequency.sh
libs/common/rkdemo_utils/: rknn_demo_utils.cc
libs/ffmpeg/include/libavutil/: ffversion.h
libs/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
libs/platform/RK3588/libjpeg/include/: jmorecfg.h
rknn_yolov8_demo/: CMakeLists.txt  build-linux_RK3588.sh
rknn_yolov8_demo/install/model/: yolov8n.rknn  yolov8n_paper.rknn
rknn_yolov8_demo/mpp_enc/: CMakeLists.txt  mpp_enc.cc  mpp_enc.h  mpp_main.cc  mpp_main.h
rknn_yolov8_demo/yolo_utils/: resize_function.cc  resize_function.h
rknn_yolov8_demo/yolov8_demo/: README.md
rknn_yolov8_demo/yolov8_demo/include/: ThreadPool.hpp  rknnPool.hpp  yolo.h
rknn_yolov8_demo/yolov8_demo/model/: yolov8n_jd.rknn  yolov8n_relu.rknn
rknn_yolov8_demo/yolov8_demo/src/: main.cc  yolo.cc
rknn_yolov8_demo/z_rkmpp_enc/: CMakeLists.txt  mpp_enc.cpp  mpp_enc.h  mpp_main.cpp  mpp_main.h  mpp_rtsp_server.cpp  mpp_rtsp_server.h
rknn_yolov8_demo/z_rkmpp_enc/mpp_base/: CMakeLists.txt  mpp_trie.cpp
rknn_yolov8_demo/z_rkmpp_enc/mpp_utils/: CMakeLists.txt  mpi_enc_utils.c  mpp_utils.c
rknn_yolov8_demo/z_rkmpp_enc/mpp_utils/inc/: mpi_enc_utils.h  mpp_utils.h
rknn_yolov8_demo/z_rkmpp_enc/osal/: CMakeLists.txt  mpp_compat.cpp  mpp_list.cpp  mpp_lock.cpp  mpp_mem_pool.cpp  mpp_queue.cpp  mpp_runtime.cpp  mpp_thread.cpp  os_env.h
rknn_yolov8_demo/z_rkmpp_enc/osal/driver/: vcodec_service.c
rknn_yolov8_demo/z_rkmpp_enc/osal/inc/: mpp_allocator.h  mpp_callback.h  mpp_compat_impl.h  mpp_device.h  mpp_eventfd.h  mpp_mem.h  mpp_platform.h  mpp_runtime.h  mpp_service.h  mpp_trace.h  vcodec_service.h
rknn_yolov8_demo/z_rkmpp_enc/osal/linux/: os_allocator.c
